apps/backstage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backstage-route
  namespace: backstage
spec:
  parentRefs:
    - name: gateway # Must match the Gateway name
      namespace: istio-system # Must match the Gateway namespace
  hostnames:
    - backstage.bergtobias.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backstage
          port: 80
